--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,6 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-appnope==0.1.4
-asttokens==2.4.1
-beautifulsoup4==4.13.4
-blinker==1.9.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.1.8
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.6
-decorator==5.1.1
-exceptiongroup==1.2.2
-executing==2.1.0
-Flask==3.1.1
-fonttools==4.54.1
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-greenlet==3.2.2
-idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.18.1
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.6
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.7
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-numpy==2.0.2
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.3.6
-playwright==1.52.0
-prompt_toolkit==3.0.48
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyee==13.0.0
-Pygments==2.18.0
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pyzmq==26.2.0
-requests==2.32.3
-scikit-learn==1.5.2
-scipy==1.13.1
-six @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
-soupsieve==2.7
-stack-data==0.6.3
-threadpoolctl==3.5.0
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.4.0
-wcwidth==0.2.13
-Werkzeug==3.1.3
-zipp==3.20.2
+flask
+flask-cors
+beautifulsoup4
+requests
+playwright
+gunicorn
